# flight_software

ADCS_app/: ADCS.json  CMakeLists.txt
ADCS_app/eds/: adcs.xml
ADCS_app/fsw/: ADCS_app.h
ADCS_app/fsw/mission_inc/: adcs_mission_cfg.h
ADCS_app/fsw/platform_inc/: adcs_platform_cfg.h
ADCS_app/fsw/src/: ADCS_app.h  app_cfg.h  estbl.c  estbl.h  exobj.c  exobj.h  exobjtbl.c  exobjtbl.h  inputbl.c  inputbl.h  mng_data.c  mng_data.h
ADCS_app/fsw/tables/: ADCS_data_tbl.json  ADCS_ini.json  cpu1_adcs_ini.json  cpu1_adcs_tbl.json
adcs_app/: CMakeLists.txt
adcs_app/fsw/mission_inc/: adcs_app_perfids.h
adcs_app/fsw/platform_inc/: adcs_app_msgids.h  adcs_app_table.h
adcs_app/fsw/src/: adcs_app.c  adcs_app.h  adcs_app_events.h  adcs_app_msg.h  adcs_app_version.h  adcs_mng_data.c  adcs_mng_data.h  des_att.txt
adcs_app/fsw/tables/: adcs_app_tbl.c
adcs_app/unit-test/: CMakeLists.txt
adcs_app/unit-test/coveragetest/: adcs_app_coveragetest_common.h  coveragetest_adcs_app.c
adcs_app/unit-test/inc/: ut_adcs_app.h
basecamp_copy/: CMakeLists.txt  adcs.json
basecamp_copy/fsw/src/: adcs_app.c  adcs_app.h  exobj.c  exobj.h
basecamp_copy/fsw/tables/: cpu1_adcs_tbl.json
hello_app/: CMakeLists.txt  hello.json
hello_app/eds/: hello.xml
hello_app/fsw/mission_inc/: hello_mission_cfg.h
hello_app/fsw/src/: app_cfg.h  (+6 more)
misc/: ADCS_hardware.txt  ADCS_requirements.txt  cFS_notes.txt  documentation.txt
sample_app/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
sample_app/unit-test/: CMakeLists.txt
skeleton_app/: CMakeLists.txt  README.md
(+21 files in other folders)
